# structure

./: CMakeLists.txt  README.md  Vector.cpp  Vector.h  avtomat.cpp  avtomat.h  avtomat.vcxproj  avtomat.vcxproj.filters  main.cpp  queue.h  stack.h  test.cpp
source/repos/avtomat/avtomat/: CMakeLists.txt  avtomat.cpp  avtomat.h  main.cpp  test.cpp
source/repos/monom/monom/: CMakeLists.txt  list.h  monom.h  test.cpp
